2012-11-19  Joey Ye  <joey.ye@arm.com>

	* elf32-arm.c (elf32_arm_final_link_relocate, 
	case R_ARM_THM_ALU_PREL_11_0, case R_ARM_THM_PC12): Align address of
	the place being relocated.
	(elf32_arm_final_link_relocate, case R_ARM_THM_PC8): Align address
	of the place being relocated and truncate addend.
	(Pa): New macro.

2012-11-14  Roland McGrath  <mcgrathr@google.com>

	* elf32-arm.c (elf32_arm_nacl_plt0_entry): Use bic rather than bfc
	instruction for data sandboxing.

2012-11-13  Tristan Gingold  <gingold@adacore.com>

	* Makefile.am (RELEASE): Unset.
	* Makefile.in: Regenerate.

2012-11-13  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.23.1
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerate.

2012-11-05  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR target/14788
	* elf32-s390.c (elf_s390_relocate_section): Set elf.dynobj for
	local ifunc symbols.
	* elf64-s390.c (elf_s390_relocate_section): Likewise.

2012-11-05  Alan Modra  <amodra@gmail.com>

	* configure.in: Apply 2012-09-10 change to config.in here.

2012-10-29  Sean Keys <skeys@ipdatasys.com>

	* elf32-xgate.c(elf_xgate_howto_table): Fix src and dest mask for
	R_XGATE_16

2012-10-22  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.23.0
	* Makefile.am (RELEASE): Unset.
	* configure, Makefile.in: Regenerate.

2012-10-22  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.23
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerate.

2012-10-16  Sofiane Naci  <sofiane.naci@arm.com>

	* elf64-aarch64.c (elf64_aarch64_tls_howto_table): Fix shift value for
	R_AARCH64_TLSIE_LD_GOTTPREL_PREL19, R_AARCH64_TLSLE_MOVW_TPREL_G2,
	R_AARCH64_TLSLE_MOVW_TPREL_G1, R_AARCH64_TLSLE_MOVW_TPREL_G1_NC,
	R_AARCH64_TLSLE_ADD_TPREL_HI12.
	(elf64_aarch64_tlsdesc_howto_table): Fix shift value for
	R_AARCH64_TLSDESC_LD64_PREL19 and R_AARCH64_TLSDESC_OFF_G1.